Fix not overlaping bug on advanced search

--- a/app/client/assets/sass/modules/_containers.scss
+++ b/app/client/assets/sass/modules/_containers.scss
@@ -48,7 +48,8 @@ div#input-search{
 }
 
 div#advanced-search {
-  margin-top: 1%;
+  position: absolute;
+  background-color: $white;
   border: 2px solid $blue;
   padding: 1%;
   border-radius: 5px;
